--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,23 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+node_modules
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Output
+.output
+.vercel
+.netlify
+.wrangler
+/.svelte-kit
+/build
 
-# IDE/Editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
+# OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Logs
-logs
-*.log
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
 
-# Claude workspace files
-.claude/
-
-# Temporary files
-*.tmp
-*.temp
-
-# Build outputs (if any)
-dist/
-build/ 
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
