--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.22.0",
-		"@sveltejs/vite-plugin-svelte": "^6.0.0",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^7.0.4"
-	},
-	"dependencies": {
-		"@js-temporal/polyfill": "^0.5.1",
-		"abushakir": "^1.5.2"
-	}
+"scripts": {
+"dev": "vite dev",
+"build": "vite build",
+"preview": "vite preview",
+"prepare": "svelte-kit sync || echo ''",
+"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+},
+"devDependencies": {
+"@sveltejs/adapter-auto": "^6.0.0",
+"@sveltejs/kit": "^2.22.0",
+"@sveltejs/vite-plugin-svelte": "^6.0.0",
+"svelte": "^5.0.0",
+"svelte-check": "^4.0.0",
+"typescript": "^5.0.0",
+"vite": "^7.0.4",
+"tailwindcss": "^3.4.4",
+"postcss": "^8.4.31",
+"autoprefixer": "^10.4.16",
+"@tailwindcss/forms": "^0.5.6"
+},
+"dependencies": {
+"@js-temporal/polyfill": "^0.5.1",
+"abushakir": "^1.5.2"
+}
 }
